feat: migration独立于SpringBoot - JdbcExecutor替代JdbcTemplate, MigrationExecutor核心执行器, MigrationCLI独立命令行入口, SpringBoot依赖改optional